# Bookfield

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/data/: art_of_war.txt  meditations.txt
backend/src/: api.py  chunk_text.py  embeddings.py  llm.py  read_books.py  retriever.py  vector_store.py
